implement movement w/ mouse + fine adjustments

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
         <div class="cloud-scene" id="cloud-scene"></div>
         <div class="medusa-container">
-            <img class="eye" src="assets/eye.svg" alt="">
-            <img id="medusa1" class="medusa" src="assets/medusa.png" alt="">
-            <img id="medusa2" class="medusa medusa-pink" src="assets/medusa-pink.png" alt="">
-            <img id="medusa3" class="medusa medusa-blue" src="assets/medusa-blue.png" alt="">
+            <img class="eye" data-value="10" src="assets/eye.svg" alt="">
+            <img id="medusa1" data-value="8" class="medusa" src="assets/medusa.png" alt="">
+            <img id="medusa2" data-value="10" class="medusa medusa-pink" src="assets/medusa-pink.png" alt="">
+            <img id="medusa3" data-value="4" class="medusa medusa-blue" src="assets/medusa-blue.png" alt="">
         </div>
 
         <div class="right">
